--- a/app/public/wp-content/themes/engress/css/index.scss
+++ b/app/public/wp-content/themes/engress/css/index.scss
@@ -314,17 +314,13 @@
 
 /* ご利用の流れ */
 .ly_flow {
-  padding: 50px 0 30px;
-}
-
-.ly_flow_inner {
-  width: 90%;
-  max-width: 900px;
-  margin: 0 auto;
+  .ly_inner {
+    padding-top: 51px;
+    padding-bottom: 68px;
+  }
 }
 
 .bl_flow_title {
-  padding-bottom: 45px;
   text-align: center;
 }
 
@@ -332,6 +328,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px 0;
+  margin-top: 46px;
 }
 
 .bl_flow_part {
