--- a/app/public/wp-content/themes/engress/css/index.scss
+++ b/app/public/wp-content/themes/engress/css/index.scss
@@ -329,71 +329,71 @@
   flex-direction: column;
   gap: 8px 0;
   margin-top: 46px;
-}
 
-.bl_flow_part {
-  display: flex;
-  width: 100%;
-  min-height: 64px; // TODO: 削除してpaddingで高さを指定
-  background-color: #F8F8F8;
-}
+  .bl_flow_part {
+    display: flex;
+    width: 100%;
+    min-height: 64px; // TODO: 削除してpaddingで高さを指定
+    background-color: #F8F8F8;
 
-.bl_flow_number {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-width: 64px;
-  min-height: 64px;
-  background-color: #F5A623;
-  color: #FFFFFF;
-  font-weight: bold;
-  font-size: 16px;
-}
-
-.bl_flow_summary_content {
-  display: flex;
-  flex-direction: column;
-  gap: 5px 0;
-  padding: 10px 21px;
-  @media screen and (min-width: 1025px) {
-    flex-direction: row;
-  }
-}
-
-.bl_flow_summary {
-  display: flex;
-  align-items: center;
-  position: relative;
-  width: 193.5px;
-  h3 {
-    color: #1B224C;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 18px;
-  }
-  &::before {
-    position: absolute;
-    top: 7.5px;
-    right: 0px;
-    width: 1px;
-    height: 29px;
-    background-color: #C3C3C3;
-    content: '';
-    @media screen and (max-width: 1024px) {
-      display: none;
+    .bl_flow_part_number {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-width: 64px;
+      min-height: 64px;
+      background-color: #F5A623;
+      color: #FFFFFF;
+      font-weight: bold;
+      font-size: 16px;
     }
-  }
-}
+    
+    .bl_flow_part_info {
+      display: flex;
+      flex-direction: column;
+      gap: 5px 0;
+      padding: 10px 21px;
+      @media screen and (min-width: 1025px) {
+        flex-direction: row;
+      }
 
-.bl_flow_content {
-  display: flex;
-  align-items: center;
-  color: #1B224C;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 27px;
-  @media screen and (min-width: 1025px) {
-    padding-left: 53.5px;
+      .bl_flow_part_info_summary {
+        display: flex;
+        align-items: center;
+        position: relative;
+        width: 193.5px;
+        h3 {
+          color: #1B224C;
+          font-weight: bold;
+          font-size: 18px;
+          line-height: 18px;
+        }
+        &::before {
+          position: absolute;
+          top: 7.5px;
+          right: 0px;
+          width: 1px;
+          height: 29px;
+          background-color: #C3C3C3;
+          content: '';
+          @media screen and (max-width: 1024px) {
+            display: none;
+          }
+        }
+      }
+      
+      .bl_flow_part_info_content {
+        display: flex;
+        align-items: center;
+        color: #1B224C;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 27px;
+        @media screen and (min-width: 1025px) {
+          padding-left: 53.5px;
+        }
+      }
+    }
   }
 }
 
