--- a/app/public/wp-content/themes/engress/css/index.scss
+++ b/app/public/wp-content/themes/engress/css/index.scss
@@ -348,49 +348,51 @@
       font-size: 1rem; // 16px
     }
     
-    .bl_flow_part_info {
+    .bl_flow_part_infos {
       display: flex;
       flex-direction: column;
       gap: 5px 0;
       padding: 10px 21px;
       @media screen and (min-width: 1025px) {
         flex-direction: row;
-        > *:first-child {
-          position: relative;
-          width: 193.5px;
-          &::before {
-            position: absolute;
-            top: 7.5px;
-            right: 0px;
-            width: 1px;
-            height: 29px;
-            background-color: #C3C3C3;
-            content: '';
-          }
-        }
-        > *:nth-child(2) {
-          margin-left: 53.5px;
-        }
       }
 
-      .bl_flow_part_info_summary {
+      .bl_flow_part_info {
         display: flex;
         align-items: center;
-        h3 {
+        height: 100%;
+        @media screen and (min-width: 1025px) {
+          &:first-child {
+            position: relative;
+            width: 193.5px;
+            &::before {
+              position: absolute;
+              top: 7.5px;
+              right: 0px;
+              width: 1px;
+              height: 29px;
+              background-color: #C3C3C3;
+              content: '';
+            }
+          }
+          &:nth-child(2) {
+            margin-left: 53.5px;
+          }
+        }
+
+        .bl_flow_part_info_summary {
           color: #1B224C;
           font-weight: bold;
           font-size: 18px;
           line-height: 18px;
         }
-      }
-      
-      .bl_flow_part_info_content {
-        display: flex;
-        align-items: center;
-        color: #1B224C;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 27px;
+        
+        .bl_flow_part_info_content {
+          color: #1B224C;
+          font-weight: 500;
+          font-size: 16px;
+          line-height: 27px;
+        }
       }
     }
   }
