--- a/app/public/wp-content/themes/engress/css/index.css
+++ b/app/public/wp-content/themes/engress/css/index.css
@@ -359,7 +359,7 @@
 .ly_blog_news .ly_inner {
   display: flex;
   flex-direction: column;
-  gap: 50px 0;
+  gap: 80px 0;
 }
 @media screen and (min-width: 768px) {
   .ly_blog_news .ly_inner {
@@ -398,7 +398,7 @@
   margin: 0;
 }
 .bl_blog_items .bl_blog_item .bl_blog_img img {
-  width: auto;
+  width: 100%;
   height: 100%;
 }
 .bl_blog_items .bl_blog_item .bl_blog_info {
