--- a/app/public/wp-content/themes/engress/css/index.scss
+++ b/app/public/wp-content/themes/engress/css/index.scss
@@ -399,7 +399,7 @@
   .ly_inner {
     display: flex;
     flex-direction: column;
-    gap: 50px 0;
+    gap: 80px 0;
     @media screen and (min-width: 768px) {
       flex-direction: row;
       justify-content: space-between;
@@ -439,7 +439,7 @@
       height: 110px;
       margin: 0; // figureタグのmarginを打ち消す
       img {
-        width: auto;
+        width: 100%;
         height: 100%;
       }
     }
