--- a/app/public/wp-content/themes/engress/css/index.css
+++ b/app/public/wp-content/themes/engress/css/index.css
@@ -386,11 +386,27 @@
 .bl_blog_items .bl_blog_item {
   display: flex;
   gap: 0 20px;
+  position: relative;
   width: 430px;
   height: 110px;
 }
 .bl_blog_items .bl_blog_item:hover {
   opacity: 0.7;
+}
+.bl_blog_items .bl_blog_item .bl_blog_category {
+  position: absolute;
+  width: 78px;
+  height: 23px;
+  padding: 4.5px 4px;
+  overflow: hidden;
+  background-color: #1B224C;
+  color: #FFFFFF;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1;
+  vertical-align: middle;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .bl_blog_items .bl_blog_item .bl_blog_img {
   width: 150px;
