--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -44,7 +44,7 @@ h1, h2, h3, p, figure {
 }
 
 // TODO: 全要素で対応後に削除予定
-.ly_fv, .ly_about, .ly_feature, .ly_flow, .ly_blog_news {
+.ly_fv, .ly_about, .ly_feature, .ly_flow, .ly_blog_news, .ly_breadcrumb {
   * {
     box-sizing: border-box;
   }
