--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -15,3 +15,15 @@
     text-decoration: underline;
   }
 }
+
+.ly_content {
+  .ly_inner {
+    display: flex;
+  }
+}
+
+.ly_sidebar {
+  width: 269px;
+  min-height: 100px; // wip
+  background-color: pink; // wip
+}
