--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .ly_breadcrumb {
   height: 50px;
   padding: 19px 0;
@@ -27,7 +28,7 @@
 .ly_sidebar {
   width: 268px;
 }
-.bl_sidebar_blogTitle {
+.bl_sidebar_title {
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -36,10 +37,12 @@
   box-sizing: border-box;
   background-color: #1B224C;
   border: 1px solid #707070;
+}
+.bl_sidebar_title .bl_sidebar_title_text {
   color: #FFFFFF;
   font-weight: bold;
   font-size: 20px;
-  line-height: 40px;
+  line-height: 2;
 }
 .bl_sidebar_blogItems {
   display: flex;
@@ -66,8 +69,33 @@
   color: #1B224C;
   font-weight: 500;
   font-size: 12px;
-  line-height: 24px;
+  line-height: 2;
   text-decoration: underline;
+}
+.ly_sidebar_category {
+  margin-top: 48px;
+}
+.bl_sidebar_category_listItems {
+  margin-top: 30px;
+}
+.bl_sidebar_category_listItem {
+  list-style-type: none;
+}
+.bl_sidebar_category_listItem + .bl_sidebar_category_listItem {
+  margin-top: 16px;
+}
+.bl_sidebar_category_link {
+  color: #1B224C;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1;
+}
+.bl_sidebar_category_link::before {
+  color: #1B224C;
+  content: '・';
+}
+.bl_sidebar_category_link:hover {
+  opacity: 0.7;
 }
 .entry-img img {
   width: 100%;
