--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -39,8 +39,9 @@ button {
   cursor: pointer;
 }
 
-h1, h2, h3, p, figure {
+h1, h2, h3, p, figure, ul {
   margin: 0;
+  padding: 0;
 }
 
 // TODO: 全要素で対応後に削除予定
