--- a/app/public/wp-content/themes/engress/css/blogs.scss
+++ b/app/public/wp-content/themes/engress/css/blogs.scss
@@ -22,10 +22,14 @@
   display: flex;
   gap: 0 48px;
   height: 148px;
+  &:hover {
+    opacity: .7;
+  }
 }
 
 .bl_newBlog_item_img {
-  width: 240px;
+  min-width: 240px;
+  max-width: 240px;
   img {
     width: 100%;
     height: 100%;
@@ -43,7 +47,7 @@
 }
 
 .bl_newBlog_item_info_title {
-  margin-top: 20px;
+  margin-top: 12px;
   color: #1B224C;
   font-weight: bold;
   font-size: 28px;
@@ -52,7 +56,7 @@
 }
 
 .bl_newBlog_item_info_text {
-  margin-top: 20px;
+  margin-top: 8px;
   color: #1B224C;
   font-weight: 500;
   font-size: 1rem;
