feat: コース・料金ページのファーストビューを作成

--- a/app/public/wp-content/themes/engress/css/footer.css
+++ b/app/public/wp-content/themes/engress/css/footer.css
@@ -137,6 +137,7 @@
   width: 159px;
   height: 31px;
   padding: 14px 19px 13px;
+  box-sizing: content-box;
   background-color: #FFFFFF;
 }
 @media screen and (max-width: 1024px) {
