--- a/app/public/wp-content/themes/engress/css/price.scss
+++ b/app/public/wp-content/themes/engress/css/price.scss
@@ -3,6 +3,15 @@
   background-color: powderblue;
 }
 
+.ly_priceFv {
+  padding: 88px 0;
+  background-image: url('../img/plan.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
 .ly_system {
 }
 
