--- a/app/public/wp-content/themes/engress/css/price.css
+++ b/app/public/wp-content/themes/engress/css/price.css
@@ -2,4 +2,12 @@
   height: 300px;
   background-color: powderblue;
 }
+.ly_priceFv {
+  padding: 88px 0;
+  background-image: url('../img/plan.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
 /*# sourceMappingURL=price.css.map */
