--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -15,7 +15,7 @@ h1, h2, h3, p, figure, ul {
   margin: 0;
   padding: 0;
 }
-.ly_fv *, .ly_about *, .ly_feature *, .ly_flow *, .ly_blog_news *, .ly_breadcrumb * {
+* {
   box-sizing: border-box;
 }
 /* 共通で使う要素 */
@@ -111,5 +111,11 @@ h1, h2, h3, p, figure, ul {
 }
 .hp_underline {
   background: linear-gradient(transparent 70%, #F5A623 70%);
+}
+.el_fvTitle {
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 2rem;
+  line-height: 1.5;
 }
 /*# sourceMappingURL=style.css.map */
