feat: ブログ一覧のファーストビューを作成

--- a/app/public/wp-content/themes/engress/css/blogs.css
+++ b/app/public/wp-content/themes/engress/css/blogs.css
@@ -1,3 +1,11 @@
+.ly_newBlogFv {
+  padding: 88px 0;
+  background-image: url('../img/blog.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
 .ly_newBlog {
   padding: 60px 0 44px;
 }
