--- a/app/public/wp-content/themes/engress/css/archive-news.scss
+++ b/app/public/wp-content/themes/engress/css/archive-news.scss
@@ -1,3 +1,12 @@
+.ly_newsFv {
+  padding: 88px 0;
+  background-image: url('../img/news.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
 .ly_newBlog {
   padding: 60px 0 44px;
 }
