fix: ヘッダーを修正

--- a/app/public/wp-content/themes/engress/css/header.scss
+++ b/app/public/wp-content/themes/engress/css/header.scss
@@ -9,6 +9,8 @@
   width: 100%;
   height: 50px;
   padding: 15px 0;
+  // TODO: border-boxに修正
+  box-sizing: content-box;
   background-color: #FFFFFF;
 }
 
