--- a/app/public/wp-content/themes/engress/css/header.css
+++ b/app/public/wp-content/themes/engress/css/header.css
@@ -9,6 +9,7 @@
   width: 100%;
   height: 50px;
   padding: 15px 0;
+  box-sizing: content-box;
   background-color: #FFFFFF;
 }
 .ly_header_inner {
