--- a/app/public/wp-content/themes/engress/css/blogs.css
+++ b/app/public/wp-content/themes/engress/css/blogs.css
@@ -32,12 +32,17 @@
   opacity: 0.7;
 }
 .bl_newBlog_item_img {
-  min-width: 240px;
+  width: 30%;
   max-width: 240px;
 }
 .bl_newBlog_item_img img {
   width: 100%;
   height: 100%;
+}
+@media screen and (max-width: 599px) {
+  .bl_newBlog_item_img {
+    width: 45%;
+  }
 }
 .bl_newBlog_item_info_time {
   color: #1B224C;
