--- a/app/public/wp-content/themes/engress/css/blogs.scss
+++ b/app/public/wp-content/themes/engress/css/blogs.scss
@@ -38,11 +38,14 @@
 }
 
 .bl_newBlog_item_img {
-  min-width: 240px;
+  width: 30%;
   max-width: 240px;
   img {
     width: 100%;
     height: 100%;
+  }
+  @media screen and (max-width: 599px) {
+    width: 45%;
   }
 }
 
