feat: よくある質問を追加

--- a/app/public/wp-content/themes/engress/css/front-page.css
+++ b/app/public/wp-content/themes/engress/css/front-page.css
@@ -353,8 +353,12 @@
   font-size: 16px;
   line-height: 27px;
 }
+.ly_faq {
+  padding: 0 0 88px;
+  text-align: center;
+}
 .ly_blog_news {
-  padding: 0 20px 119px;
+  padding: 0 0 119px;
 }
 .ly_blog_news .ly_inner {
   display: flex;
