--- a/app/public/wp-content/themes/engress/css/front-page.scss
+++ b/app/public/wp-content/themes/engress/css/front-page.scss
@@ -393,8 +393,13 @@
   }
 }
 
+.ly_faq {
+  padding: 0 0 88px;
+  text-align: center;
+}
+
 .ly_blog_news {
-  padding: 0 20px 119px;
+  padding: 0 0 119px;
 
   .ly_inner {
     display: flex;
