--- a/app/public/wp-content/themes/engress/css/front-page.scss
+++ b/app/public/wp-content/themes/engress/css/front-page.scss
@@ -395,7 +395,54 @@
 
 .ly_faq {
   padding: 0 0 88px;
+}
+
+.bl_faq_title {
   text-align: center;
+}
+
+.bl_faq_items {
+  margin-top: 24px;
+}
+
+.bl_faq_item {
+  padding: 0 0 16px;
+  border-top: 1px solid #1B224C;
+  &:last-child {
+    border-bottom: 1px solid #1B224C;
+  }
+}
+
+.bl_faq_question {
+  position: relative;
+  padding: 24px 56px 16px 0;
+}
+
+.bl_faq_question_icon {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  font-size: 24px;
+}
+
+.bl_faq_question_text {
+  color: #1B224C;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.bl_faq_answer {
+  padding: 16px 24px;
+  background-color: #F8F8F8;
+}
+
+.bl_faq_answer_text {
+  color: #1B224C;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 .ly_blog_news {
