--- a/app/public/wp-content/themes/engress/css/front-page.css
+++ b/app/public/wp-content/themes/engress/css/front-page.css
@@ -363,7 +363,6 @@
   margin-top: 24px;
 }
 .bl_faq_item {
-  padding: 0 0 16px;
   border-top: 1px solid #1B224C;
 }
 .bl_faq_item:last-child {
@@ -371,13 +370,16 @@
 }
 .bl_faq_question {
   position: relative;
-  padding: 24px 56px 16px 0;
+  padding: 16px 56px 16px 0;
   color: #1B224C;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  cursor: pointer;
 }
 .bl_faq_answer {
+  display: none;
+  margin-bottom: 16px;
   padding: 16px 24px;
   background-color: #F8F8F8;
   color: #1B224C;
