--- a/app/public/wp-content/themes/engress/css/front-page.scss
+++ b/app/public/wp-content/themes/engress/css/front-page.scss
@@ -266,7 +266,6 @@
 }
 
 .bl_success_summary {
-  margin-bottom: 3.5px;
   color: #FFFFFF;
   font-weight: bold;
   font-size: 16px;
@@ -274,6 +273,7 @@
 }
 
 .bl_success_picture {
+  margin-top: 4px;
   height: 171px;
   background-color: #FFFFFF;
 }
