feat: 成功事例のタイトルは必ず2行分入るように修正 (最大30文字)

--- a/app/public/wp-content/themes/engress/css/front-page.css
+++ b/app/public/wp-content/themes/engress/css/front-page.css
@@ -241,10 +241,11 @@
   }
 }
 .bl_success_summary {
+  height: 56px;
   color: #FFFFFF;
   font-weight: bold;
   font-size: 16px;
-  line-height: 29px;
+  line-height: 1.75;
 }
 .bl_success_picture {
   margin-top: 4px;
