--- a/app/public/wp-content/themes/engress/css/front-page.scss
+++ b/app/public/wp-content/themes/engress/css/front-page.scss
@@ -266,10 +266,11 @@
 }
 
 .bl_success_summary {
+  height: 56px;
   color: #FFFFFF;
   font-weight: bold;
   font-size: 16px;
-  line-height: 29px;
+  line-height: 1.75;
 }
 
 .bl_success_picture {
