--- a/app/public/wp-content/themes/engress/css/front-page.css
+++ b/app/public/wp-content/themes/engress/css/front-page.css
@@ -252,6 +252,12 @@
   height: 171px;
   background-color: #FFFFFF;
 }
+.bl_success_picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center bottom;
+}
 .bl_success_profile {
   display: flex;
   gap: 0 8px;
