--- a/app/public/wp-content/themes/engress/css/front-page.scss
+++ b/app/public/wp-content/themes/engress/css/front-page.scss
@@ -277,6 +277,12 @@
   margin-top: 4px;
   height: 171px;
   background-color: #FFFFFF;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center bottom;
+  }
 }
 
 .bl_success_profile {
