--- a/app/public/wp-content/themes/engress/css/front-page.scss
+++ b/app/public/wp-content/themes/engress/css/front-page.scss
@@ -269,13 +269,13 @@
   height: 56px;
   color: #FFFFFF;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 1.75;
 }
 
 .bl_success_picture {
   margin-top: 4px;
-  height: 171px;
+  height: 172px;
   background-color: #FFFFFF;
   img {
     width: 100%;
@@ -293,30 +293,30 @@
 
 .bl_success_status {
   width: 35%;
-  height: 32px; // TODO: 削除してpaddingで高さを指定
-  padding: 0 4px;
+  height: 32px;
+  padding: 0 8px;
   background-color: #FFFFFF;
   color: #1B224C;
-  font-size: 16px;
-  line-height: 32px;
+  font-size: 1rem;
+  line-height: 2;
 }
 
 .bl_success_name {
   width: 65%;
-  height: 32px; // TODO: 削除してpaddingで高さを指定
-  padding: 0 4px;
+  height: 32px;
+  padding: 0 8px;
   background-color: #FFFFFF;
-  font-size: 16px;
-  line-height: 32px;
+  font-size: 1rem;
+  line-height: 2;
 }
 
 .bl_success_result {
-  height: 32px; // TODO: 削除してpaddingで高さを指定
+  height: 32px;
   margin-top: 10px;
-  padding: 0 4px;
+  padding: 0 8px;
   background-color: #FFFFFF;
-  font-size: 16px;
-  line-height: 32px;
+  font-size: 1rem;
+  line-height: 2;
 }
 
 /* ご利用の流れ */
