--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -56,9 +56,11 @@
   height: 70px;
 }
 .bl_sidebar_blogItem_img {
-  min-width: 100px;
+  width: 110px;
 }
 .bl_sidebar_blogItem_img img {
+  object-fit: cover;
+  object-position: center center;
   width: 100%;
   height: 100%;
 }
