--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -64,8 +64,10 @@
 }
 
 .bl_sidebar_blogItem_img {
-  min-width: 100px;
+  width: 110px;
   img {
+    object-fit: cover;
+    object-position: center center;
     width: 100%;
     height: 100%;
   }
