--- a/app/public/wp-content/themes/engress/css/single-news.scss
+++ b/app/public/wp-content/themes/engress/css/single-news.scss
@@ -83,12 +83,21 @@
   }
 
   blockquote {
+    position: relative;
     margin: 24px 0;
     padding: 28px 28px 16px 72px;
     background-color: #F8F8F8;
     cite {
       display: block;
       margin-bottom: 24px;
+    }
+    &::before {
+      position: absolute;
+      top: 36px;
+      left: 20px;
+      color: #B4B4B4;
+      font-size: 92px;
+      content: '“'
     }
   }
 }
