--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -26,12 +26,17 @@
   h1 {
     margin: 24px 0;
     color: #1B224C;
+  }
+
+  h2 {
+    margin: 24px 0;
+    color: #1B224C;
     font-weight: bold;
     font-size: 1.75rem;
     line-height: 1.5;
   }
 
-  h2 {
+  h3 {
     margin: 24px 0;
     padding-left: 10px;
     border-left: #1B224C 4px solid;
@@ -39,10 +44,6 @@
     font-weight: bold;
     font-size: 1.5rem;
     line-height: 28px;
-  }
-
-  h3 {
-    margin: 24px 0;
   }
 
   p {
